Applications/UptimeKuma/components/_application/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uptimekuma
  labels:
    app.kubernetes.io/component: 'application'
spec:
  selector:
    app.kubernetes.io/component: 'application'
  clusterIP: None
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
      name: http
  type: ClusterIP
