Applications/UptimeKuma/components/_application/resources/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptimekuma
  labels:
    app.kubernetes.io/component: 'application'
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: CHANGE_ME
      kind: Rule
      middlewares:
        - name: chain-default
          namespace: traefik-system
      services:
        - name: uptimekuma
          port: 3001
  tls:
    secretName: uptimekuma-certificate
